--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [metadata]
 name = factuur generator
 description = Een terminal applicatie voor het maken van facturen
-author = Jouw Naam
-author_email = jquintusk@hotmail.com
+author = Quintus Kessler
+author_email = quintusk@hotmail.com
 license = MIT
 license_files = LICENSE.txt
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
-url = https://github.com/quintussk/factuurgenerator
+url = https://github.com/quintussk/cabinet_tester
 platforms = any
 classifiers =
     Development Status :: 4 - Beta
@@ -26,11 +26,3 @@ install_requires =
     textual
     asyncio
 
-[options.packages.find]
-where = src
-exclude =
-    tests
-
-[options.entry_points]
-console_scripts =
-    YEBU = factuurgenerator.my_app:main
